--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: gcr.io/gcp-runtimes/container-structure-test
+      - image: alpine
     working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
 
     steps:
@@ -13,6 +13,8 @@ jobs:
       - setup_remote_docker
 
       - run: docker build . -t ${{REPO_NAME}}
+      - run: curl -LO https://storage.googleapis.com/container-structure-test/latest/container-structure-test-linux-amd64 && chmod +x container-structure-test-linux-amd64 && mkdir -p $HOME/bin && export PATH=$PATH:$HOME/bin && mv container-structure-test-linux-amd64 $HOME/bin/container-structure-test
+
       - run: container-structure-test test -c config.yaml -i ${{REPO_NAME}}
 
 workflows:
