--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,17 +5,17 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: alpine
+      - image: circleci/golang:latest
     working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
 
     steps:
       - checkout
       - setup_remote_docker
 
-      - run: docker build . -t ${{REPO_NAME}}
+      - run: docker build . -t ${CIRCLE_PROJECT_REPONAME}
       - run: curl -LO https://storage.googleapis.com/container-structure-test/latest/container-structure-test-linux-amd64 && chmod +x container-structure-test-linux-amd64 && mkdir -p $HOME/bin && export PATH=$PATH:$HOME/bin && mv container-structure-test-linux-amd64 $HOME/bin/container-structure-test
 
-      - run: container-structure-test test -c config.yaml -i ${{REPO_NAME}}
+      - run: container-structure-test test -c config.yaml -i ${CIRCLE_PROJECT_REPONAME}
 
 workflows:
   version: 2
