--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -27,4 +27,14 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: nekottyo/kustomize-kubeval:latest
+          tags: nekottyo/kustomize-kubeval:kustomizev4,nekottyo/kustomize-kubeval:latest
+          target: kustomizev4
+
+      -
+        name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: nekottyo/kustomize-kubeval:kustomizev3
+          target: kustomizev3
