--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -25,7 +25,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push v4
-        id: docker_build
+        id: docker_build_v4
         uses: docker/build-push-action@v2
         with:
           push: true
@@ -33,7 +33,7 @@ jobs:
           target: kustomizev4
 
       - name: Build and push v3
-        id: docker_build
+        id: docker_build_v3
         uses: docker/build-push-action@v2
         with:
           push: true
